Add abstract, conclusion and text into third chapter.

--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -11,7 +11,9 @@
 \pgfplotsset{compat = 1.3}
 \usepgfplotslibrary{groupplots}
 \usepackage{tikz-timing}
+\usetikzlibrary{shapes,arrows}
 %\usetikztiminglibrary{nicetabs} 
+\usepackage[estonian, english]{babel}
 
 \usepackage{alphalph} 			% subfigure letters to plots
 \makeatletter
