--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -24,7 +24,7 @@
 \include{./tex/EEG}
 \include{./tex/BCI}
 \include{./tex/SSVEP_BCI}
-\include{./tex/results}
+%\include{./tex/results}
 \addcontentsline{toc}{chapter}{Conclusion}
 \include{./tex/conclusion}
 
