--- a/thesis/tex/abstract.tex
+++ b/thesis/tex/abstract.tex
@@ -1,7 +1,22 @@
-
+\selectlanguage{english}
 \chapter*{Control a Robot via VEP Using Emotiv EPOC}
+
 \section*{Abstract}
+
+\normalsize
+This thesis describes an \acrshort{SSVEP}-based \acrshort{BCI} implemented as a practical part of this thesis. One possible usage of a \acrshort{BCI} that efficiently implements a communication channel between the brain and an external device would help severely disabled people to control devices that currently require pushing buttons, for example an electric wheelchair. The \acrshort{BCI} implemented as a part of this thesis uses widely known \acrshort{PSDA} and \acrshort{CCA} feature extraction methods and introduces a new way to combine these methods. Combining different methods improves the performance of a \acrshort{BCI}. The \acrshort{BCI} is open-source, written in Python 2.7, has graphical user interface and uses inexpensive \acrshort{EEG} device called Emotiv EPOC. The \acrshort{BCI} requires only a computer and Emotiv EPOC, no additional hardware is needed. Different \acrshort{EEG} devices could be used after modifying the code. 
+
 \section*{Keywords}
-\normalsize{EEG, BCI, f-VEP, SSVEP, CCA, PSDA, FFT, electroencephalography}
+
+\acrshort{EEG}, electroencephalography, \acrshort{BCI}, brain-computer interface, f-VEP, frequency-modulated visual evoked potential, \acrshort{SSVEP}, steady-state visual evoked potential, \acrshort{CCA}, canonical correlation analysis, \acrshort{PSDA}, power spectral density analysis, open-source
+\selectlanguage{estonian}
+\chapter*{Visuaalse stiimuliga esilekutsutud potentsiaalidel põhinev roboti juhtimine Emotiv EPOC seadmega}
+
 \section*{Lühikokkuvõte}
+
+Antud töö kirjeldab visuaalse stiimuliga esilekutsutud potentsiaalidel põhinevat aju ning arvuti vahelist liidest (AAL), mis loodi antud töö praktilise osana. AALi saab kasutada aju ja seadme vahelise otsese suhtluskanali loomiseks, mis tähendab, et seadmega suhtlemiseks pole vaja nuppe vajutada, piisab vaid visuaalsete stiimulite vaatamisest. Efektiivne AAL võimaldaks raske puudega isikutel näiteks elektroonilist ratastooli juhtida. Antud töö osana loodud AAL kasutab tuntud kanoonilise korrelatsiooni- ja võimsusspektri analüüsi meetodeid ning uuendusena kombineerib need kaks meetodit üheks teineteist täiendavaks meetodiks. Kahe meetodi kombinatsioon muudab AALi täpsemaks. Antud AAL on avatud lähtekoodiga, kirjutatud Python 2.7 programmeerimiskeeles, sisaldab graafilist kasutajaliidest ning kasutab aju tegevuse mõõtmiseks elektroensefalograafia (EEG) seadet Emotiv EPOC. AALi kasutamiseks on vaja ainult arvutit ja Emotiv EPOC seadet. Koodi muutes on võimalik kasutada ka teisi EEG seadmeid. 
+
 \section*{Võtmesõnad}
+
+EEG, elektroensefalograafia, AAL, aju-arvuti liides, visuaalne stiimul, kanooniline korrelatisoonianalüüs, võimsusspektri analüüs, avatud lähtekood
+\selectlanguage{english}
